tests/errors/redeclaration1.f90
program redeclaration1
implicit none
integer :: i
real :: j, i
i = 5
j = 6
print *, i, j
end program
